--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "test": "jest --watch"
   },
   "dependencies": {
     "next": "12.2.5",
@@ -16,7 +17,9 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "14.2.0",
     "@types/node": "18.7.13",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
@@ -24,6 +27,10 @@
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "jest": "28.1.0",
+    "jest-environment-jsdom": "28.1.0",
+    "jest-styled-components": "^7.1.1",
+    "ts-jest": "^28.0.8",
     "typescript": "4.7.4"
   },
   "config": {
