refactor: renamed every component's file to his corresponding name, removed all default imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,13 +20,13 @@
     "incremental": true,
     "baseUrl": "src",
     "paths": {
-      "@/components/*": [
+      "~/components/*": [
         "components/*"
       ],
-      "@/pages/*": [
+      "~/pages/*": [
         "pages/*"
       ],
-      "@/styles/*": [
+      "~/styles/*": [
         "styles/*"
       ]
     }
